tests/snapshots/tests__sort_requires_with_glob@basic.lua.snap
---
source: tests/tests.rs
expression: "format!(\"glob_pattern: {}\\n{}\", glob_pattern,\nformat_code(&contents, Config\n{\n    sort_requires: SortRequiresConfig\n    { enabled: true, glob: Some(glob_pattern.to_string()) },\n    ..Config::default()\n}, None, OutputVerification::None).unwrap())"
input_file: tests/inputs-sort-requires/basic.lua
---
glob_pattern: C*
local ah = require("a")
local bee = require("b")

print("hello world")
