tests/snapshots/tests__sort_requires_with_glob@chained-dependency.lua.snap
---
source: tests/tests.rs
expression: "format!(\"glob_pattern: {}\\n{}\", glob_pattern,\nformat_code(&contents, Config\n{\n    sort_requires: SortRequiresConfig\n    { enabled: true, glob: Some(glob_pattern.to_string()) },\n    ..Config::default()\n}, None, OutputVerification::None).unwrap())"
input_file: tests/inputs-sort-requires/chained-dependency.lua
---
glob_pattern: C*
local holder = script.Parent
local modules = holder.Modules
local aa = require(modules.Test)
local bee = require(modules.BeeMovie)
local cee = require(modules.Script)
print("hello!")
